# pairswitch

./: .gitignore  Cargo.toml  README.md
data/: db.json
src/: application.rs  backup.rs  commit.rs  commit_list.rs  dialog.rs  git.rs  header.rs  initialize_git.rs  main.rs  manage_commit.rs  manage_commit_menu.rs  menu.rs  misc.rs  pairing_session_end.rs  pairing_session_start.rs  prepare_commit_msg.rs  run_command.rs  select_pairs.rs  stateful_table.rs  structs.rs  style.toml  table.rs  theme.rs
