[package]
name = "pairswitch"
version = "0.1.0"
authors = ["Mark Cipolla <mark@markcipolla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
termion = "1.5.5"
regex = "1.1.0"
lazy_static = "1.4.0"
app = { git = "https://github.com/biluohc/app",branch = "master", version = "0.6.5" }

