[package]
name = "pairswitch"
version = "0.0.1"
authors = ["Mark Cipolla <mark@markcipolla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.1.0"
lazy_static = "1.4.0"
rand = "0.8.3"
cursive = "0.16"
cursive_table_view = "0.13"
fui = "2.0"
itertools = "0.10.0"
